--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
